# SST-CacheSim

./: .gitignore  Makefile.am  Makefile.in
include/: arbiter.h  cache.h  event.h  generator.h  interconnect.h  memory.h
src/: arbiter.cc  cache.cc  event.h  generator.cc  generator.h  interconnect.cc  memory.cc
tests/: generatorNcache.py
tools/: build.sh  create_trace.py  pinatrace_threaded.cpp
traces/: README.md  cache_coherence.cc  cache_coherence_high_hit.cc  cache_coherence_ocean.cc  cache_coherence_padded.cc  cache_coherence_random.cc  no-padding_0.txt  no-padding_1.txt  no-padding_2.txt  no-padding_3.txt  ocean2_0.txt  ocean2_1.txt  ocean2_2.txt  ocean2_3.txt  ocean3_0.txt  ocean3_1.txt  ocean3_2.txt  ocean3_3.txt  ocean_0.txt  ocean_1.txt  ocean_2.txt  ocean_3.txt  padding_hit_0.txt  padding_hit_1.txt  padding_hit_2.txt  padding_short_0.txt  padding_short_1.txt  padding_short_2.txt  padding_short_3.txt  random_0.txt  random_1.txt  random_2.txt  random_3.txt  sum_1.txt  sum_2.txt  sum_3.txt  trace_0.txt  trace_1.txt  trace_2.txt  trace_3.txt
traces/deprecated/: padding_hit_3.txt
